<resources>
    <string name="app_name">Missing</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">UserName</string>
    <string name="address">Address</string>
    <string name="email">email</string>
    <string name="register_new_account">Register New Account</string>
    <string name="checkNetworkConnection">please check internet Connection</string>
    <string name="validate_name">please add your name</string>
    <string name="validate_email">please add your email</string>
    <string name="validate_address">Password is different from Confirm Password</string>
    <string name="validate_password_weak">password is weak</string>
    <string name="validate_password_add">please add your password</string>
    <string name="validate_phone_incorrect">phone is incorrect</string>
    <string name="validate_phone_add">please add your phone</string>
    <string name="categories">Categories</string>
    <string name="missing">missing</string>
    <string name="existing">existing</string>
    <string name="missing_name">missing name</string>
    <string name="choostype">اختار نوع العملية</string>
    <string name="choosegovern">choose Govern</string>
    <string name="city">choose city</string>
    <string name="addcomment">Add comment</string>
    <string name="home">Home</string>
    <string name="add_missing_or_existing">Add missing or existing item</string>
    <string name="searching_for_missing_or_existing">Searching for missing or existing</string>
    <string name="logout">Logout</string>
    <string name="chooselanguage">choose language</string>
    <string name="next">next</string>
    <string name="chooseimg">Choose image</string>
    <string name="login_successfully">You Login Successfully</string>
    <string name="check_your_data">Check your data</string>
    <string name="enter_missing_nam">Please enter the missing or existing item</string>
    <string name="enter_missing_img">Please add image of missing or existing item</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="sendcode">Send Code</string>
    <string name="code">Code</string>
    <string name="newpassword">new password</string>
    <string name="legalletter">Legal Letter</string>
    <string name="legalletter_details">We are a missing site that everyone bears responsibility for what they put in the application</string>
    <string name="about">about application</string>
    <string name="about_details">We are a missing application, a Saudi application that helps you find your personal belongings from money and people, gold, watches and mobiles</string>
    <string name="confirm_password">confirm password</string>
    <string name="ok">OK</string>
    <string name="notification">Notifications</string>
    <string name="contact_message">Please go to the email to activate the account</string>
    <string name="reset_password_msg">Please go to the email and enter the new password</string>
    <string name="find">found :</string>
    <string name="add_location" >Add a location in detail if you want</string>
    <string name="email_or_phone">email or phone</string>
    <string name="validate_email_or_phone">please add your email or phone</string>
</resources>
