<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories.CategoryActivity"
    android:orientation="vertical"
    android:background="@drawable/category_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:onClick="Back"
            android:contentDescription="back"/>
        <TextView
            android:id="@+id/txt_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/categories"/>
    </RelativeLayout>
    <RadioGroup
    android:id="@+id/radiogroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton
        android:id="@+id/missing_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:checked="true"
        android:onClick="check"/>
    <RadioButton
        android:id="@+id/existing_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:onClick="check"/>
</RadioGroup>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"/>
</LinearLayout>