<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.RegisterationActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:onClick="Back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/register"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:background="@drawable/logo"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/et_username"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/user_img"
                android:hint="@string/username"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:fontFamily="@font/myfont"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:background="@drawable/regiser_btn_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/password_img"
                android:hint="@string/password"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:inputType="textPassword"
                android:fontFamily="@font/myfont"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/regiser_btn_background" />
            <EditText
                android:id="@+id/et_user_national_num"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/nationalnum_img"
                android:hint="@string/nationalnum"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:fontFamily="@font/myfont"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/regiser_btn_background" />
            <EditText
                android:id="@+id/et_user_phone"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/phone_img"
                android:hint="@string/phone"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:fontFamily="@font/myfont"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/regiser_btn_background" />
            <EditText
                android:id="@+id/et_user_address"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/address_img"
                android:hint="@string/address"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:fontFamily="@font/myfont"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/regiser_btn_background" />
            <Button
                android:onClick="Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:fontFamily="@font/myfont"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>