<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.Home"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:onClick="Back"/>
        <TextView
            android:id="@+id/txt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/home"/>
        <ImageView
            android:id="@+id/menu_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_menu"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:onClick="menu_imgbtn"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/category_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/myfont"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/add_missing_or_existing"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="Add"/>
            <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/myfont"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/searching_for_missing_or_existing"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:onClick="search"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>