<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.ForgetPasswordActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:onClick="Back"
            android:contentDescription="back"/>
        <TextView
            android:id="@+id/txt_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/forgetpassword"/>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:background="@drawable/logo"
                android:layout_marginTop="20dp"
                android:contentDescription="logo"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:drawableRight="@drawable/ic_email"
                android:paddingBottom="15dp"
                android:hint="@string/email"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/myfont"
                android:textStyle="normal"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btn_forget_password"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/myfont"
                android:text="@string/sendcode"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:elevation="20dp"
                android:shadowColor="@color/black"
                android:layout_margin="40dp"
                android:onClick="send_code"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>