<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories.AddMissing"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:onClick="Back"
            android:contentDescription="back"/>
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/add_missing_or_existing"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:background="@drawable/logo"
                android:layout_marginTop="20dp"
                android:contentDescription="logo"/>
            <EditText
                android:id="@+id/et_missing_name"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:hint="@string/missing_name"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:gravity="center"
                android:fontFamily="@font/myfont"
                android:textStyle="normal"
                android:paddingEnd="10dp"
                android:background="@drawable/regiser_btn_background"
                android:layout_marginTop="20dp"
                android:contentDescription="logo"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    app:cardCornerRadius="25dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="3dp"
                    android:layout_marginTop="30dp">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/missing_img"
                                android:layout_width="280dp"
                                android:layout_height="120dp"
                                android:background="@drawable/camera_logo"
                                android:scaleType="fitXY"
                                android:contentDescription="image"/>
                            <Button
                                android:id="@+id/btn_choose_img"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@color/btn_color"
                                android:text="@string/chooseimg"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:layout_weight="1.0"
                                android:layout_marginTop="100dp"
                                android:fontFamily="@font/myfont"
                                android:textSize="16sp"
                                android:onClick="ChooseImage"/>
                    </FrameLayout>
                </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btn_next_one"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/myfont"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/next"
                android:onClick="DoNext"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>